confirm content wrap bug

--- a/src/dialog/Confirm.less
+++ b/src/dialog/Confirm.less
@@ -36,6 +36,7 @@
             margin-left: 36px;
             font-size: 12px;
             color: @text-secondary-color;
+            white-space: pre-wrap;
         }
         .@{__confirm-prefix-cls}-action {
             padding: 12px 0;
